<resources>
    <string name="app_name">Nivel prostie</string>

    <string name="esti_prost">Ești prost</string>
    <string name="tot_prost_esti">Tot prost ești smr</string>
    <string name="selecteaza_ceva">Selecteză ceva, prostule</string>
    <string name="selecteaza_nivelul_de_prostie">Te rog selectează nivelul de prostie</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="nivel_de_prostie_selectat">Nivel de prostie selectat:</string>
    <string name="not_applicable">N/A</string>
    <string name="verifica">Verifică dacă ești prost</string>

</resources>