<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".EstiProstKotlin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecteaza_nivelul_de_prostie"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/prostie1"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:text="@string/_1" />

        <Button
            android:id="@+id/prostie0"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/_0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nivel_de_prostie_selectat" />

        <TextView
            android:id="@+id/nivelProstie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_applicable" />
    </LinearLayout>


    <Button
        android:id="@+id/verificare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/verifica"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>